[gd_scene load_steps=17 format=3 uid="uid://v6exyvaf14rv"]

[ext_resource type="Script" path="res://core/scripts/enemy.gd" id="1_8fyvs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lx75w"]
albedo_color = Color(1, 0.184314, 0.137255, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_usd33"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wh6l7"]
albedo_color = Color(0.454902, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_mad6s"]
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k0anp"]

[sub_resource type="SphereShape3D" id="SphereShape3D_j6dvc"]
radius = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s767a"]
radius = 0.534363
height = 2.1

[sub_resource type="SphereMesh" id="SphereMesh_wtdvf"]
radius = 0.2
height = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_n2al3"]
radius = 0.219362

[sub_resource type="Animation" id="Animation_wf88q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/eye:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.454902, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/eye:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_k3wnc"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_p4624"]
resource_name = "forward"

[sub_resource type="Animation" id="Animation_8u0dj"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.6),
"transitions": PackedFloat32Array(1, 1, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.135088, 0), Vector3(0, 0.107652, 0), Vector3(0, -0.134286, 0)]
}

[sub_resource type="Animation" id="Animation_sc40n"]
resource_name = "in_chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/eye:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.454902, 1, 1, 1), Color(0.454902, 0.423529, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/eye:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfovj"]
_data = {
"RESET": SubResource("Animation_wf88q"),
"attack": SubResource("Animation_k3wnc"),
"forward": SubResource("Animation_p4624"),
"idle": SubResource("Animation_8u0dj"),
"in_chase": SubResource("Animation_sc40n")
}

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00988126, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_8fyvs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_lx75w")
mesh = SubResource("CapsuleMesh_usd33")

[node name="eye" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.536572, -0.55764)
material_override = SubResource("StandardMaterial3D_wh6l7")
mesh = SubResource("SphereMesh_mad6s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_k0anp")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.1
path_height_offset = 1.0
path_metadata_flags = 3
avoidance_enabled = true
debug_enabled = true

[node name="detection" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="detection"]
shape = SubResource("SphereShape3D_j6dvc")

[node name="Hurtbox" type="Area3D" parent="." groups=["enemyHurtbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05588, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_s767a")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773229, 0.997433, 0)

[node name="Punch" type="MeshInstance3D" parent="Hitbox"]
mesh = SubResource("SphereMesh_wtdvf")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_n2al3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfovj")
}

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="detection" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_area_3d_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
